# utf_ranges

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark.cpp
example/: CMakeLists.txt  utf8_to_utf16be.cpp
include/tcb/ranges/: convert.hpp  istreambuf_range.hpp  ostreambuf_iterator.hpp  view.hpp
include/tcb/ranges/detail/: utf.hpp
include/tcb/ranges/view/: bom.hpp  bytes.hpp  endian_convert.hpp  line_end_transform.hpp  utf_convert.hpp
include/tcb/utf_ranges/: convert.hpp  istreambuf_range.hpp  ostreambuf_iterator.hpp  view.hpp
include/tcb/utf_ranges/detail/: utf.hpp
include/tcb/utf_ranges/view/: bom.hpp  bytes.hpp  endian_convert.hpp  line_end_transform.hpp  utf_convert.hpp
test/: CMakeLists.txt  bom_test.cpp  bytes_test.cpp  endian_test.cpp  istreambuf_range_test.cpp  line_end_transform_test.cpp  ostreambuf_iterator_test.cpp  utf_convert_view_test.cpp  view_test.cpp
